--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,9 @@
     padding: 0;
     box-sizing: border-box;
 }
+html{
+    scroll-behavior: smooth;
+}
 body{
     color: #0e0e0e;
     font-family: 'Nunito', sans-serif;
